--- a/index.html
+++ b/index.html
@@ -12,4 +12,5 @@
   <h2>Saman Goudarzi</h2>
   <h3>GIS Analyst/Cartographer</h3>
 </body>
+<div style="width:500px;height:100px;border:1px solid #000;">This is a rectangle!</div>
 </html>
