--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
   <title>Saman Goudarzi</title>
  
 
-  <link rel="stylesheet" href="main.css">
+  <link rel='stylesheet' href='main.css'>
 
 </head>
-
+<div id='box'></div>
 <body>
   <h2>Saman Goudarzi</h2>
   <h3>GIS Analyst/Cartographer</h3>
 </body>
-<div style="width:500px;height:100px;border:1px solid #000;">This is a rectangle!</div>
+
 </html>
