--- a/index.html
+++ b/index.html
@@ -4,13 +4,6 @@
   <title>Saman Goudarzi</title>
   <link rel='stylesheet' href='main.css'>
 </head>
-<div class='overlay' id='box'><h2><a href="http://www.tandfonline.com/toc/fjps20/current"style='color:#5FABA7;text-decoration:
-none'>The Journal of Peasant Studies </a> Author Affiliations</h2><h3>Mapping the Porduction of Development Knowledge</h3><h3>Made by 
-<a href="https://samangoudarzi.github.io"style='color:#836c8b;text-decoration:none'>Saman Goudarzi</a></h3><div id='pd'><p>This map is
-part of a larger project examining patterns of publication in the field of international development. Data from the 
-<a href='https://www.sciencebase.gov/catalog/item/4f4e4acee4b07f02db67fb39'style='color:#836c8b;text-decoration:none'> ScienceBase 
-Catalog </a> and <a href='http://geo2.scholarsportal.info/#r/tab/browseTab/result'style='color:#836c8b;text-decoration:none'> Scholars 
-GeoPortal</a> was used.</p></div></div>
-
+<div class='overlay' id='box'><h2>Saman Goudarzi</h2><h3>GIS Analyst/Cartographer</h3></div>
 
 </html>
