--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
   <title>Saman Goudarzi</title>
   <link rel='stylesheet' href='main.css'>
 </head>
-<div class='overlay' id='box'><h2>Saman Goudarzi</h2><h3>GIS Analyst/Cartographer</h3></div>
+<div class='overlay' id='box'><h2>SAMAN GOUDARZI</h2><h3>RESEARCHER / CARTOGRAPHER</h3></div>
 
 </html>
