--- a/index.html
+++ b/index.html
@@ -7,3 +7,10 @@
 <div class='overlay' id='box'><h2>SAMAN GOUDARZI</h2><h3>RESEARCHER / CARTOGRAPHER</h3></div>
 
 </html>
+
+  	<div class="wrapper">
+	    <ul class="social-icons icon-circle list-unstyled list-inline"> 
+	      <li> <a href="#"><i class="fa fa-github-alt"></i></a></li> 
+	      <li> <a href="#"><i class="fa fa-linkedin"></i></a></li> 
+	  	</ul></div> 
+      <div class="copyright"><a href="http://ameyraut.com">ameyraut.com</a></div>
