--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>Saman Goudarzi</title>
   <link rel='stylesheet' href='main.css'>
-  <link rel="stylesheet" href="">
+  <link rel="stylesheet" href="csmb.css">
 </head>
 <div class='overlay' id='box'><h2>SAMAN GOUDARZI</h2><h3>RESEARCHER / CARTOGRAPHER</h3></div>
 <div class="container types cf">
