--- a/index.html
+++ b/index.html
@@ -5,110 +5,10 @@
   <link rel='stylesheet' href='main.css'>
   <link rel="stylesheet" href="csmb.css">
 </head>
-<div class='overlay' id='box'><h2>SAMAN GOUDARZI</h2><h3>RESEARCHER / CARTOGRAPHER</h3></div>
-<a href="#" class="csmb">CSS Social Media Button</a>
+<div class='overlay' id='box'><h2>SAMAN GOUDARZI</h2><h3>RESEARCHER / CARTOGRAPHER</h3><h2>
+  <a href="#" class="csmb">CSS Social Media Button</a></h2></div>
 
-<div class="container types cf">
-      <div class="buttons-header">
-        &nbsp;
-      </div>
 
-      <div class="types-container default cf">
-        <div class="button-container">
-          <div class="buttons">
-            <a href="#" class="csmb csmb-github">GitHub</a>
-          </div>
-          <pre class="type">.csmb</pre>
-        </div>
-      <div class="buttons-container cf">
-        <div class="buttons default">
-          <div class="buttons-group">
-            <a href="#" class="csmb csmb-linkedin">LinkedIn</a>
-            <a href="#" class="csmb-flat csmb-linkedin">LinkedIn</a>
-          </div>
-          <div class="buttons-group">
-            <a href="#" class="csmb csmb-border csmb-linkedin">LinkedIn</a>
-            <a href="#" class="csmb-flat csmb-border csmb-linkedin">LinkedIn</a>
-          </div>
-          <div class="buttons-group">
-            <a href="#" class="csmb csmb-rounded csmb-linkedin">LinkedIn</a>
-            <a href="#" class="csmb-flat csmb-rounded csmb-linkedin">LinkedIn</a>
-          </div>
-          <div class="buttons-group">
-            <a href="#" class="csmb csmb-rounded csmb-border csmb-linkedin">LinkedIn</a>
-            <a href="#" class="csmb-flat csmb-rounded csmb-border csmb-linkedin">LinkedIn</a>
-          </div>
-          <div class="buttons-group">
-            <a href="#" class="csmb csmb-round csmb-linkedin">LinkedIn</a>
-            <a href="#" class="csmb-flat csmb-round csmb-linkedin">LinkedIn</a>
-          </div>
-          <div class="buttons-group">
-            <a href="#" class="csmb csmb-round csmb-border csmb-linkedin">LinkedIn</a>
-            <a href="#" class="csmb-flat csmb-round csmb-border csmb-linkedin">LinkedIn</a>
-          </div>
-        </div>
-        <pre class="type">.csmb-linkedin</pre>
-      </div>
-
-      <div class="buttons-container cf">
-        <div class="buttons default">
-          <div class="buttons-group">
-            <a href="#" class="csmb csmb-mail">E-mail</a>
-            <a href="#" class="csmb-flat csmb-mail">E-mail</a>
-          </div>
-          <div class="buttons-group">
-            <a href="#" class="csmb csmb-border csmb-mail">E-mail</a>
-            <a href="#" class="csmb-flat csmb-border csmb-mail">E-mail</a>
-          </div>
-          <div class="buttons-group">
-            <a href="#" class="csmb csmb-rounded csmb-mail">E-mail</a>
-            <a href="#" class="csmb-flat csmb-rounded csmb-mail">E-mail</a>
-          </div>
-          <div class="buttons-group">
-            <a href="#" class="csmb csmb-rounded csmb-border csmb-mail">E-mail</a>
-            <a href="#" class="csmb-flat csmb-rounded csmb-border csmb-mail">E-mail</a>
-          </div>
-          <div class="buttons-group">
-            <a href="#" class="csmb csmb-round csmb-mail">E-mail</a>
-            <a href="#" class="csmb-flat csmb-round csmb-mail">E-mail</a>
-          </div>
-          <div class="buttons-group">
-            <a href="#" class="csmb csmb-round csmb-border csmb-mail">E-mail</a>
-            <a href="#" class="csmb-flat csmb-round csmb-border csmb-mail">E-mail</a>
-          </div>
-        </div>
-        <pre class="type">.csmb-mail</pre>
-      </div>
-
- <div class="buttons-container cf">
-        <div class="buttons default">
-          <div class="buttons-group">
-            <a href="#" class="csmb csmb-github">GitHub</a>
-            <a href="#" class="csmb-flat csmb-github">GitHub</a>
-          </div>
-          <div class="buttons-group">
-            <a href="#" class="csmb csmb-border csmb-github">GitHub</a>
-            <a href="#" class="csmb-flat csmb-border csmb-github">GitHub</a>
-          </div>
-          <div class="buttons-group">
-            <a href="#" class="csmb csmb-rounded csmb-github">GitHub</a>
-            <a href="#" class="csmb-flat csmb-rounded csmb-github">GitHub</a>
-          </div>
-          <div class="buttons-group">
-            <a href="#" class="csmb csmb-rounded csmb-border csmb-github">GitHub</a>
-            <a href="#" class="csmb-flat csmb-rounded csmb-border csmb-github">GitHub</a>
-          </div>
-          <div class="buttons-group">
-            <a href="#" class="csmb csmb-round csmb-github">GitHub</a>
-            <a href="#" class="csmb-flat csmb-round csmb-github">GitHub</a>
-          </div>
-          <div class="buttons-group">
-            <a href="#" class="csmb csmb-round csmb-border csmb-github">GitHub</a>
-            <a href="#" class="csmb-flat csmb-round csmb-border csmb-github">GitHub</a>
-          </div>
-        </div>
-        <pre class="type">.csmb-github</pre>
-      </div>
 </html>
 
   
