--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <link rel='stylesheet' href='main.css'>
   <link rel="stylesheet" href="csmb.css">
 </head>
-<div class='overlay' id='box'><h2>SAMAN GOUDARZI</h2><h3>RESEARCHER / CARTOGRAPHER</h3><h2>
-  <a href="#" class="csmb">CSS Social Media Button</a></h2></div>
+<div class='overlay' id='box'><h2>SAMAN GOUDARZI</h2><h3>RESEARCHER / CARTOGRAPHER</h3><h4>
+  <a href="#" class="csmb">CSS Social Media Button</a><a href="#" class="csmb csmb-github">GitHub profile: username</a></h4></div>
 
 
 </html>
