--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <div class='overlay' id='box'><h2>SAMAN GOUDARZI</h2><h3>RESEARCHER / CARTOGRAPHER</h3><img>
   <a href="#" class="csmb">CSS Social Media Button</a><a href="#" class="csmb csmb-github">GitHub profile: 
-  username</a></img></div>
+  username</a><a href="#" class="csmb csmb-github">GitHub profile: username</a></img></div>
 
 
 </html>
