--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <link rel='stylesheet' href='main.css'>
   <link rel="stylesheet" href="csmb.css">
 </head>
-<div class='overlay' id='box'><h2>SAMAN GOUDARZI</h2><h3>RESEARCHER / CARTOGRAPHER</h3><h3>
+<div class='overlay' id='box'><h2>SAMAN GOUDARZI</h2><h3>RESEARCHER / CARTOGRAPHER</h3>
   <a href="#" class="csmb">CSS Social Media Button</a><a href="#" class="csmb csmb-github">GitHub profile: 
-  username</a><a href="#" class="csmb csmb-github">GitHub profile: username</a></h3></div>
+  username</a><a href="#" class="csmb csmb-github">GitHub profile: username</a></div>
 
 
 </html>
