--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link rel='stylesheet' href='main.css'>
   <link rel="stylesheet" href="csmb.css">
 </head>
-<div class='overlay' id='box'><p1>SAMAN GOUDARZI</p1><p2>RESEARCHER / CARTOGRAPHER</p2>
+<div class='overlay' id='box'><h2>SAMAN GOUDARZI</h2><h3>RESEARCHER / CARTOGRAPHER</h3>
   <a href="#" class="csmb">CSS Social Media Button</a><a href="#" class="csmb csmb-github">GitHub profile: 
   username</a><a href="#" class="csmb csmb-github">GitHub profile: username</a></div>
 
