--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link rel='stylesheet' href='main.css'>
   <link rel="stylesheet" href="csmb.css">
 </head>
-<div class='overlay' id='box'><p2>SAMAN GOUDARZI</p2><p3>RESEARCHER / CARTOGRAPHER</p3>
+<div class='overlay' id='box'><p2>SAMAN GOUDARZI</p2></br><p3>RESEARCHER / CARTOGRAPHER</p3>
   <a href="#" class="csmb">CSS Social Media Button</a><a href="#" class="csmb csmb-github">GitHub profile: 
   username</a><a href="#" class="csmb csmb-github">GitHub profile: username</a></div>
 
