--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
   <link rel="stylesheet" href="csmb.css">
 </head>
 <div class='overlay' id='box'><h2>SAMAN GOUDARZI</h2><h3>DESIGNER / CARTOGRAPHER</h3>
-  <a href="#" class="csmb">CSS Social Media Button</a><a href="#" class="csmb csmb-github">GitHub profile: 
-  username</a><a href="#" class="csmb csmb-github">GitHub profile: username</a></div>
-
+ <div class="types-container default cf">
+        <div class="button-container">
+          <div class="buttons">
+            <a href="#" class="csmb csmb-github">GitHub</a>
+          </div>
+          <pre class="type">.csmb</pre>
+        </div>
 
 </html>
 
