--- a/index.html
+++ b/index.html
@@ -6,14 +6,51 @@
   <link rel="stylesheet" href="csmb.css">
 </head>
 <div class='overlay' id='box'><h2>SAMAN GOUDARZI</h2><h3>DESIGNER / CARTOGRAPHER</h3>
- <div class="types-container default cf">
+
+<div class="container types cf">
+      <div class="buttons-header">
+        &nbsp;
+      </div>
+
+      <div class="types-container default cf">
         <div class="button-container">
           <div class="buttons">
             <a href="#" class="csmb csmb-github">GitHub</a>
           </div>
           <pre class="type">.csmb</pre>
         </div>
-
+<div class="buttons-container cf">
+        <div class="buttons default">
+          <div class="buttons-group">
+            <a href="#" class="csmb csmb-github">GitHub</a>
+            <a href="#" class="csmb-flat csmb-github">GitHub</a>
+          </div>
+          <div class="buttons-group">
+            <a href="#" class="csmb csmb-border csmb-github">GitHub</a>
+            <a href="#" class="csmb-flat csmb-border csmb-github">GitHub</a>
+          </div>
+          <div class="buttons-group">
+            <a href="#" class="csmb csmb-rounded csmb-github">GitHub</a>
+            <a href="#" class="csmb-flat csmb-rounded csmb-github">GitHub</a>
+          </div>
+          <div class="buttons-group">
+            <a href="#" class="csmb csmb-rounded csmb-border csmb-github">GitHub</a>
+            <a href="#" class="csmb-flat csmb-rounded csmb-border csmb-github">GitHub</a>
+          </div>
+          <div class="buttons-group">
+            <a href="#" class="csmb csmb-round csmb-github">GitHub</a>
+            <a href="#" class="csmb-flat csmb-round csmb-github">GitHub</a>
+          </div>
+          <div class="buttons-group">
+            <a href="#" class="csmb csmb-round csmb-border csmb-github">GitHub</a>
+            <a href="#" class="csmb-flat csmb-round csmb-border csmb-github">GitHub</a>
+          </div>
+        </div>
+        <pre class="type">.csmb-github</pre>
+      </div>
+</div>
+    </div>
+  </body>
 </html>
 
   
