--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
   <title>Saman Goudarzi</title>
   <link rel='stylesheet' href='main.css'>
-  <link rel="stylesheet" href="csmb.css">
+  <link rel='stylesheet' href='csmb.css'>
 </head>
 <div class='overlay' id='box'><h2>SAMAN GOUDARZI</h2><h3>DESIGNER / CARTOGRAPHER</h3>
+</div>
 
 <div class="container types cf">
       <div class="buttons-header">
