--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <title>Saman Goudarzi</title>
   <link rel='stylesheet' href='main.css'>
 </head>
+<body>
 <div class='overlay' id='box'><h2>SAMAN GOUDARZI</h2><h3>DESIGNER / CARTOGRAPHER</h3>
 </div>
 
