--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel='stylesheet' href="rrssb.css">
 </head>
 <body>
-<div class='overlay' id='box'><h2>SAMAN GOUDARZI</h2><h3>CARTOGRAPHER / STUDENT RESEARCHER</h3>
+<div class='overlay' id='box'><h2>SAMAN GOUDARZI</h2><h3>STUDENT RESEARCHER / CARTOGRAPHER</h3>
 <!-- Buttons start here. Copy this ul to your document. -->
 <ul class="rrssb-buttons clearfix">
     <li class="rrssb-github">
